Fixed a ton of stuff, and switched the main scraper source to League of Graphs. Scraping is still slow and the front end still does not create any graphs. Lots of stuff to still code and fix. Basic functions working but only on the test case for Faker does it show the Rank for the player and not for my account. Added tests and test cases and more robust data normalization and validation code.

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
           <div class="form-group">
             <label for="dataSource">Data Source</label>
             <select id="dataSource">
-              <option value="opgg" selected>OP.GG</option>
+              <option value="league_of_graphs" selected>League of Graphs</option>
+              <option value="opgg">OP.GG</option>
               <option value="mobalytics">Mobalytics</option>
-              <option value="league_of_graphs">League of Graphs</option>
               <option value="riot_api">Riot API</option>
             </select>
           </div>
